add workarounds so the two laravel projects could share the same name for their different jobs without confliting

--- a/moderation-worker/composer.json
+++ b/moderation-worker/composer.json
@@ -25,9 +25,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "ModWorker\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "App\\Jobs\\": "Jobs/"
         }
     },
     "autoload-dev": {
