update env examples

--- a/moderation-worker/.env.example
+++ b/moderation-worker/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JvZegTxMvQO/oxWeBIeT3qX4I4H5xzLA9VO6Zs6bWeo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -21,9 +21,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=moderation_worker
+DB_DATABASE=modqueue
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -35,7 +35,7 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=rabbitmq
 
 CACHE_STORE=database
 # CACHE_PREFIX=
